--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,11 @@ dependencies:
   intl : ^0.18.0
   google_maps_flutter: ^2.2.2
   geolocator: ^9.0.2
+  url_strategy:
   permission_handler: ^10.2.0
-
+  flutter_typeahead: ^4.1.1
+  google_maps_flutter_web: ^0.4.0+3
+  flutter_google_places: ^0.3.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
