--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,13 @@ dependencies:
   flutter_typeahead: ^4.1.1
   google_maps_flutter_web: ^0.4.0+3
   flutter_google_places: ^0.3.0
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   geocoding: ^2.0.5
   http: ^0.13.5
+  webview_flutter: ^2.0.9
 
 dev_dependencies:
   flutter_test:
